<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/black">
    <TextView 
        android:id="@+id/txt_cotact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <EditText 
        android:id="@+id/edit_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:paddingLeft="10dp"
        android:background="@android:color/white"/>
     <EditText 
         android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingLeft="10dp"
        android:background="@android:color/white"/>
      <EditText
          android:id="@+id/edit_email" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:background="@android:color/white"/>
       <EditText
           android:id="@+id/edit_mobile" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:paddingLeft="10dp"
        android:background="@android:color/white"/>
       <LinearLayout 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginLeft="30dp">
       <Button 
           android:id="@+id/save"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/save"
           android:layout_marginLeft="20dp"
           />
       <Button 
           android:id="@+id/viewAll"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/view"
           android:layout_marginLeft="15dp"/>
       </LinearLayout>
 
</LinearLayout>
